--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^3.0.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "underscore": "^1.9.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.2.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
